--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "good-console": "6.1.2",
     "good-squeeze": "5.0.0",
     "hapi": "15.1.1",
-    "joi": "9.1.0"
+    "hapi-swagger": "^7.4.0",
+    "inert": "^4.0.2",
+    "joi": "9.1.0",
+    "vision": "^4.1.0"
   }
 }
